<resources>
    <string name="app_name">Kandydat PŁ</string>
    <string name="title_activity_navigation_drawer">Navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Start</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="snack_bar_text">Deleted 1 element</string>
    <string name="snack_bar_undo">Undo</string>
    <string name="question">Question</string>
    <string name="add">Add</string>
    <string name="date">Date</string>
    <string name="enter_description">Enter description</string>
    <string name="description">Description</string>
    <string name="enter_title">Enter title</string>
    <string name="set_date">Set date</string>
    <string name="save">Save</string>
    <string name="questioncontent">Question\'s content</string>
    <string name="comment">Comment</string>
    <string name="search">Search</string>
    <string name="study_offers">Study offers</string>
    <string name="active_study_offers">Active study offers</string>
    <string name="questions">Questions</string>
    <string name="question_bookmarks">Question bookmarks</string>
    <string name="files">Files</string>
    <string name="contacts">Contacts</string>
    <string name="checklist">Checklist</string>
    <string name="calendar">Calendar</string>
    <string name="logout">Logout</string>
    <string name="testtext">Test text</string>
    <string name="filename">Filename</string>
    <string name="contact_name">Contact name</string>
    <string name="contact_phone">Contact phone</string>
    <string name="contact_e_mail">Contact e-mail</string>
    <string name="full_name_of_the_user">Full name of the user</string>
    <string name="comment_s_content">Comment\'s content</string>
    <string name="placeholder">Placeholder</string>
    <string name="textview">Test text</string>
    <string name="study_offer_contents">Study offer contents</string>
    <string name="title">Title</string>
    <string name="add_to_active_offers">Add to active offers</string>
    <string name="remove_from_active_offers">Remove from active offers</string>
    <string name="study_offer_details">Study offer details</string>
    <string name="search_results">Search results</string>
    <string name="new_question">New question</string>
    <string name="checklist_event">Checklist event</string>

<!--AWS login-->
    <string name="title_activity_sign_in">Sign-in</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="sign_in_username">User Name / Phone # (+1555&#8230;)</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_new_account">Create New Account</string>
    <string name="sign_in_forgot_password">Forgot Your Password?</string>
    <string name="sign_in_show_password">show</string>
    <string name="sign_in_hide_password">hide</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_mfa">MFA Code</string>
    <string name="title_activity_sign_up_confirm">Confirm Account</string>
    <string name="title_dialog_sign_up_failed">Sign Up Failed</string>
    <string name="forgot_password_header">Forgot your password?</string>
    <string name="forgot_password_body">Set your new password with the verification code that was sent to you.</string>
    <string name="forgot_password_input_code_hint">Verification code</string>
    <string name="forgot_password_button_hint">Set password</string>
    <string name="force_change_password_button_hint">Set password</string>
    <string name="mfa_header">MFA verification is required to authenticate.</string>
    <string name="mfa_code_sent_message">Code sent.</string>
    <string name="verify_button_text">Verify</string>
    <string name="username_text">Username</string>
    <string name="given_name_text">Given name</string>
    <string name="email_address_text">Email address</string>
    <string name="phone_number_text">Phone number (+15551234567)</string>
    <string name="sign_up_header">Enter your information to sign up.</string>
    <string name="sign_up_confirm_code">Confirmation code</string>
    <string name="sign_up_confirm_text">Confirm</string>
    <string name="sign_up_confirm_code_sent">A confirmation code was sent to</string>
    <string name="sign_up_confirm_enter_code">Please enter the code below to confirm your account.</string>
    <string name="sign_up_confirm_title">Confirm your account</string>
    <string name="password_change_success">Password change succeeded.</string>
    <string name="password_change_failed">Password change failed.</string>
    <string name="sign_up_success">Sign up succeeded.</string>
    <string name="sign_up_failed">Sign up failed.</string>
    <string name="login_failed">Login failed.</string>
    <string name="sign_up_confirm_success">Sign up confirmation succeeded.</string>
    <string name="sign_up_confirm_failed">Sign up confirmation failed.</string>
    <string name="user_does_not_exist">The provided username does not exist.</string>
    <string name="incorrect_username_or_password">The provided username or password is incorrect.</string>
    <string name="password_change_no_verification_failed">Cannot reset password without registered/verified email or phone number</string>
    <string name="mfa_code_empty">MFA Code is empty.</string>
    <string name="mfa_failed">MFA Failed.</string>
    <string name="password_length_validation_failed">Password should have 6 or more characters.</string>
    <string name="sign_up_username_missing">Missing username.</string>
    <string name="sign_up_confirm_code_missing">Sign Up Confirmation code is missing.</string>
    <string name="sign_up_in_progress">Sign up in progress</string>
    <string name="please_wait">Please wait</string>
    <string name="force_change_password_header">Please set a new password</string>
    <string name="force_change_password_body">The password on the account must be changed to continue</string>
    <string name="title_activity_force_change_password">Force Change Password</string>
    <string name="failed_to_unlike_the_comment">Failed to unlike the comment</string>
    <string name="remove_from_bookmarks">Removed from bookmarks</string>
    <string name="failed_to_like_the_comment">Failed to like the comment</string>
    <string name="failed_to_remove_from_bookmarks">Failed to remove from bookmarks</string>
    <string name="get_questions_failed">Get questions failed</string>
    <string name="failed_to_bookmark">Failed to bookmark</string>
    <string name="question_sent">Question sent</string>
    <string name="failed_to_send_the_question">Failed to send the question</string>
    <string name="comment_sent">Comment sent</string>
    <string name="failed_to_send_the_comment">Failed to send the comment</string>
    <string name="get_comment_list_failed">Get comment list failed</string>
    <string name="added_to_active_offers">Added to active offers</string>
    <string name="failed_to_add_to_active_offers">Failed to add to active offers</string>
    <string name="removed_from_active_offers">Removed from active offers</string>
    <string name="failed_to_remove_from_active_offers">Failed to remove from active offers</string>
    <string name="you_do_not_have_permissions_to_download_this_file">You don\'t have permissions to download this file</string>
    <string name="failed_to_retrieve_study_offers">Failed to retrieve study offers</string>
    <string name="cannot_save_without_the_internet_connection">Cannot save without the Internet connection</string>
    <string name="publi_events_fetch_failed">Public events fetch failed</string>
    <string name="failed_to_get_user_data">Failed to get user data</string>
    <string name="created_user_data">Created user data</string>
    <string name="failed_to_create_user_data">Failed to create user data</string>
    <string name="you_cannot_delete_system_events">You can\'t delete system events</string>
    <string name="cannot_save_the_new_events_order">Cannot save the new events order</string>
    <string name="public_events_fetch_failed">Public events fetch failed</string>
    <string name="user_events_fetch_failed">User events fetch failed</string>
    <string name="item_added">Item added!</string>
    <string name="item_changed">Item changed!</string>
    <string name="item_removal_failed">Item removal failed</string>
    <string name="failed_to_add_the_item">Failed to add the item</string>
    <string name="failed_to_edit_the_item">Failed to edit the item</string>
    <string name="delete">Delete</string>
    <string name="get_contacts_failed">Get contacts failed</string>
    <string name="get_files_failed">Get files failed</string>
    <string name="added_to_bookmarks">Added to bookmarks</string>
    <string name="getting_user_data">Getting user data...</string>
    <string name="database_access">Database access</string>
    <string name="_0">0</string>
    <string name="like_button">Like button</string>
</resources>
